--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" type="text/css" href="mirador-flex/css/mirador-combined.css">
+    <link rel="stylesheet" type="text/css" href="mirador/css/mirador-combined.css">
     <title>Mirador Viewer</title>
     <style type="text/css">
      #viewer {
@@ -16,7 +16,7 @@
   <body>
     <div id="viewer"></div>
 
-    <script src="mirador-flex/mirador.js"></script>
+    <script src="mirador/mirador.js"></script>
     <script type="text/javascript">
 
      $(function() {
