instantiate Mirador with synchronized windows enabled

--- a/index.html
+++ b/index.html
@@ -71,7 +71,18 @@
            { "manifestUri": "http://media.nga.gov/public/manifests/nga_highlights.json", "location": "National Gallery of Art"}
          ],
          "windowObjects": [],
-         "annotationEndpoint": { "name":"Local Storage", "module": "LocalStorageEndpoint" }
+         "annotationEndpoint": { "name":"Local Storage", "module": "LocalStorageEndpoint" },
+         'mainMenuSettings': {
+           'show': true,
+           'buttons' : {
+             'bookmark' : false,
+             'synchronizedWindowGroups' : false,
+             'layout' : true,
+             'options' : false,
+             'fullScreenViewer': true,
+             'synchronizedWindowGroups': true
+           }
+         }
        });
      });
     </script>
