--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
            "searchTabAvailable": true,
            "annotations" : true
          },
+         'canvasThumbnailLabelTransform': ['.+?_', '']
       });
      });
     </script>
